/**
 * Copyright (C) 2009-2017 Lightbend Inc. <http://www.lightbend.com>
 */

option java_package = "akka.stream";
option optimize_for = SPEED;

/*************************************************
  StreamRefs (SourceRef / SinkRef) related formats
**************************************************/

// TODO make explicit types for SinkRef/SourceRef as they can carry initial settings (initial demand etc)

message SinkRef {
    optional ActorRef targetRef = 1;
    // this will be basically always false, since we already materialized this "connection"
    // so materializing another Source, where this Sink was created BY materializing a Source does not make sense
    optional bool canMaterializeSource = 2;
}

message SourceRef {
    optional ActorRef originRef = 1;
    // this will be basically always false, since we already materialized this "connection"
    // so materializing another Source, where this Sink was created BY materializing a Source does not make sense
    optional bool canMaterializeSink = 2;
}

message ActorRef {
    required string path = 1;
}

message Payload {
    required bytes enclosedMessage = 1;
    required int32 serializerId = 2;
    optional bytes messageManifest = 3;
}

// stream refs protocol

message OnSubscribeHandshake {
    required ActorRef targetRef = 1;
}
message CumulativeDemand {
    required int64 seqNr = 1;
}

message SequencedOnNext {
    required int64 seqNr = 1;
    required Payload payload = 2;
}

message RemoteStreamFailure {
    optional bytes cause = 1;
}

message RemoteStreamCompleted {
    required int64 seqNr = 1;
}
